mobile task details screen implemented
